efroth.atg
import array, collections
import opcodes, ioconsts
import struct, sys, json

COMPILER EFroth

   Opcodes = opcodes.OpCodes()
   IO = ioconsts.IOConsts()
   WordCnt = 0
   Words = collections.OrderedDict()
   Globals = collections.OrderedDict()
   GlobalLastAddr = 0
   WordList = []
   WordStackUse = {}
   Labels = {}
   Addr = 0
   Fixups = collections.deque()
   ROM = array.array("B")
   StackUse = (0,0)

   # Struct to map ROM address ranges to symbols
   DebugInfo = {}
   AddrToSource = {}
   Tags = {}
   T_OPCODE = 0
   T_VAL = 1  

   def updateStackUse(self, maindiff, retdiff):
     self.StackUse = (self.StackUse[0] + maindiff, self.StackUse[1] + retdiff)

   def emit(self, op, otype, newop, comment=''):
      print("%5d" % self.Addr, "%6s" % op, "  ", comment)
      if op in self.Opcodes.OPCODESET:
        self.updateStackUse(*self.Opcodes.OPCODEDICT[op])
        self.ROM.append(self.Opcodes.OPCODENUM[op])
      else:
        self.ROM.append(op)

      if (op == ';') or (op == 'EXIT'):
        print("Stack delta:", self.StackUse)
        self.checkWordStacks()
        currentword = self.WordList[-1]
        self.WordStackUse[currentword] = self.StackUse

      self.AddrToSource[int(self.Addr)] = (newop, otype, self.token.pos, self.token.line, self.token.col, self.token.val, self.ROM[-1])
      self.Addr += 1

   def checkWordStacks(self):
      currentword = self.WordList[-1]
      if currentword in self.WordStackUse:
        # Check that stack use matches at all exits
        u = self.WordStackUse[currentword]
        if self.StackUse != u:
          self.SemErr( f"Stack usage must be the same at all word exits. Previous = {u}, current = {self.StackUse}." )

   def addWord(self, wordstr):
      if wordstr not in self.Words:
        self.StackUse = (0,0)
        self.Words[wordstr] = (self.WordCnt, self.Addr)
        self.WordList.append(wordstr)
        print(": %s" % wordstr)
        self.WordCnt += 1
        return wordstr
      else:
        self.SemErr(f"'{wordstr}' already defined: ")

   def addGlobal(self, gstr):
     if gstr not in self.Globals:
       self.Globals[gstr] = self.GlobalLastAddr
       print("GLOBAL: %s" % gstr)
       self.GlobalLastAddr += 4
     else:
       self.SemErr(f"'{gstr}' already defined: ")       

   def addLabel(self, label):
     labelname = self.WordList[-1] + '::' + label
     if labelname in self.Labels:
       self.SemErr("Label already defined: " + labelname)
     else:
       self.Labels[labelname] = self.Addr
       print("{%s}" % labelname)

   def addTag(self, tag):
     self.Tags[self.Addr] = tag
     print("%5d" % self.Addr, "<%s>" % tag)

   def emitWord(self, wordstr, comment=''):
      if wordstr in self.Opcodes.OPCODESET:
        # It's an opcode
        self.emit(wordstr, self.T_OPCODE, 1, comment=comment)
        return
      
      if wordstr in self.IO.IODICT:
        # It's a defined IO constant
        self.emitVal(self.IO.IOCONSTVAL[wordstr], comment="// %s: %d" % (wordstr, self.IO.IOCONSTVAL[wordstr]))
        diffm, diffr = (1, 0)

        return

      if wordstr in self.Words:
        waddr = self.Words[wordstr][1]
        self.emitVal(waddr, comment="// %5d %s" % (waddr, wordstr))
        self.emit("CALL", self.T_OPCODE, 1)
        #print("Stack use before:", self.StackUse)
        (m, r) = self.WordStackUse[wordstr]
        self.StackUse = (self.StackUse[0]+m, self.StackUse[1]+r)
        #print("Stack use after:", self.StackUse)

        return

      # Maybe it's a label
      labelname = self.WordList[-1] + '::' + wordstr
      if labelname in self.Labels:
        laddr = self.Labels[labelname]
        self.emitVal(laddr, comment = "// %s" % labelname)
        return

      # Maybe it's a global
      if wordstr in self.Globals:
        val = self.Globals[wordstr]
        self.emitVal(val, comment = "// %s (%d)" % (wordstr, val))
        return

      self.SemErr(f"Didn't know what to do with: '{wordstr}'. It's not an opcode, word, known constant, or label." )  

   def floatToBytes(self, floatval):
     bitpattern = struct.pack("<f", float(floatval))
     return struct.unpack("BBBB", bitpattern)

   def emitFloat(self, floatval, comment=''):
      floatval = float(floatval)
      bytes = self.floatToBytes(floatval)
      self.emit("IMMF", self.T_OPCODE, 1);
      self.emit(bytes[0], self.T_VAL, 0, comment = "// %02X (float: %8f)" % (bytes[0], floatval))
      self.emit(bytes[1], self.T_VAL, 0, comment = "// %02X" % (bytes[1]))
      self.emit(bytes[2], self.T_VAL, 0, comment = "// %02X" % (bytes[2]))
      self.emit(bytes[3], self.T_VAL, 0, comment = "// %02X" % (bytes[3]))

   def emitAddr(self, addr, addfixup=False, comment=''):
      if (addr >=0) and (addr < 65536):
        # 16 bit unsigned immediate
        self.emit('IMMU', self.T_OPCODE, 1)
        if addfixup:
          self.Fixups.append(self.Addr)
        self.emit(addr & 0xFF, self.T_VAL, 0,  comment=comment)
        self.emit((addr >> 8) & 0xFF, self.T_VAL, 0, comment=comment)
        return

   def fixupAddr(self, addr):
      d = list(self.AddrToSource[addr])
      d[-1] = self.ROM[addr]
      self.AddrToSource[addr] = tuple(d)

   def doFixup(self, tofix, addr):
      print(f"Fixup {tofix} to {addr}")

      self.ROM[tofix] = addr & 0xFF
      self.fixupAddr(tofix) 

      self.ROM[tofix+1] = (addr >> 8) & 0xFF
      self.fixupAddr(tofix) 


   def emitVal(self, val, comment=''):
      val = float(val)
      intval = int(val)
      fracval = val % 1

      # It's a float
      if (fracval != 0):
        self.emitFloat(val)
        return

      if (intval >= 0) and (intval < 128):
        # 7-bit immediate
        # comment = "// %s %s" % (intval & 0x7F, comment)
        self.emit(0x80 | intval, self.T_VAL, 1, comment=comment)
        self.updateStackUse(1,0)
        return

      if (intval >= -128) and (intval < 128):
        # 8-bit immediate
        self.emit('IMMS', self.T_OPCODE, 1)
        self.emit(intval, self.T_VAL, 0, comment=comment)
        return

      offset = intval - self.Addr
      if (offset >= -128) and (offset < 128):
        # PC-relative number
        self.emit('PCIMMS', self.T_OPCODE, 1)
        self.emit(offset, self.T_VAL, 0, comment=comment)
        return

      if (intval >=0) and (intval < 65536):
        # 16 bit unsigned immediate
        self.emit('IMMU', self.T_OPCODE, 1)
        self.emit(intval & 0xFF, self.T_VAL, 0, comment=comment)
        self.emit((intval >> 8) & 0xFF, self.T_VAL, 0, comment=comment)
        return

      # Fine, no efficient way to encode the value
      self.emitFloat(val, comment=comment)

   def checkWords(self):
     if "RunShot" not in self.Words:
       self.SemErr( "The word 'RunShot' must be defined." )
     if "Idle" not in self.Words:
       self.SemErr( "The word 'Idle' must be defined." )
     if "Halt" not in self.Words:
       self.SemErr( "The word 'Halt' must be defined." )

   def checkPathsEqual(self, p1, p2):
     if (p1[0] != p2[0]) or (p1[1] != p2[1]):
       self.SemErr( f"Both paths through a conditional should have the same effect on stack sizes, {p1} vs {p2}" )

   def writeResults(self, inputfile, outputfile):
      #print(self.AddrToSource)
      #print(self.Words)
      debuginfo = {
        'AddrToSource' : self.AddrToSource,
        'Words' : self.Words,
        'Tags' : self.Tags
      }

      #print("Object code:")
      #bytes = [format(x, "02X") for x in self.ROM]
      #print("  ", ",".join(bytes))
      #print()
      addr_shot = self.Words['RunShot'][1]
      addr_idle = self.Words['Idle'][1]
      addr_halted = self.Words['Halt'][1]
      with open(outputfile+".bin", "wb") as f:
        data = struct.pack(f"<4sHHHHHHH{len(self.ROM)}s", b"EFVM", 
          0,             # Version
          self.MaxVol,
          self.MaxSec,
          0x12,          # Start of ROM
          addr_shot,
          addr_idle,
          addr_halted,
          self.ROM.tobytes()
        )
        f.write(data)
      
      with open(inputfile,'r') as infile:
        debuginfo["Source"] = infile.read()

      with open(outputfile+".debug", 'w') as outfile:
        json.dump(debuginfo, outfile, indent=2)
      
   def startFor(self):
      self.emitAddr(0, addfixup=True)
      self.emitWord("FOR")

   def endFor(self, addr):
      self.emitWord("ENDFOR", comment=f"// FOR at {addr}.")
      self.doFixup(self.Fixups.pop(), self.Addr)

CHARACTERS
  eol      = CHR(10) .
  letter   = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz_[].@!&" .
  digit    = "0123456789" .
  hexdigit = "0123456789ABCDEF" .
  noquote1 = ANY - "'" - eol .
  noquote2 = ANY - '"' - eol .

TOKENS
  identifier = letter {letter | digit} .
  number     = digit { digit } .
  hexnumber  = "0x" hexdigit { hexdigit } .
  negnumber  = "-" digit { digit } .
  string     =  "'" noquote1 {noquote1} "'" | '"' noquote2 {noquote2} '"' .
  float      = digit {digit} '.' digit {digit} .
  negfloat   = "-" digit {digit} '.' digit {digit} .

COMMENTS FROM "//" TO eol
COMMENTS FROM "/*" TO "*/"

IGNORE  CHR(9) .. CHR(13)

PRODUCTIONS
  EFroth               = "Program("
                          string 
                          "," 
                          number                  (. self.MaxVol = int(self.token.val) .)
                          "," 
                          number                  (. self.MaxSec = int(self.token.val) .)
                          ")" 
                          Program                 (. self.checkWords() .)
                          .                       
  Program              =  { Global }
                          { Word }
                          .

  Global               = "Global"
                          identifier              (. self.addGlobal(self.token.val) .)
                          .
  Word                 = SYNC
                          AnnotatedWord
                          |
                          SimpleWord
                          .
  AnnotatedWord        = ":("
                          { identifier } 
                          WEAK "--" 
                          { identifier } 
                          ")" 
                          RestOfWord 
                          .
  SimpleWord           = ":"
                          RestOfWord
                          .
  RestOfWord           = WordDef<out name>     
                          { CompoundStatement }
                          EndOfWord
                          .
  CompoundStatement    = If | For | Repeat | While | Statement .               
  If                   = "IF"                    
                                                 (. self.emitAddr(0, addfixup=True)             .)
                                                 (. self.emitWord("BZ")                         .)
                                                 (. stackbeforeif = self.StackUse               .)                                                                                                  
                          { CompoundStatement }
                          { 
                                                 (. tofix = self.Fixups.pop()                   .)
                                                 (. self.emitAddr(0, addfixup=True)             .)
                                                 (. self.emitWord("BRA")                        .)
                                                 (. stackbeforeelse = self.StackUse             .)
                          "ELSE"               
                                                 (. self.doFixup(tofix, self.Addr);             .) 
                                                 (. self.StackUse = stackbeforeif               .)
                          { CompoundStatement }  
                                                 (. self.checkPathsEqual(stackbeforeelse, self.StackUse) .)
                          }
                          "ENDIF"                (. self.doFixup(self.Fixups.pop(), self.Addr)  .)
                                                 (. self.StackUse = stackbeforeif               .)
                          .
  For                  = "FOR"                   (. self.startFor(); addr = self.Addr-1         .)
                          { CompoundStatement }
                          "ENDFOR"               (. self.endFor(addr)                           .)
                          .
  Repeat               = "REPEAT"
                          { CompoundStatement }
                          "ENDREPEAT"
                          .
  While                = "WHILE"
                          { CompoundStatement }
                          "ENDWHILE"
                          .
  Statement            = WordName
                        | Number 
                        | Label        
                        | MathOp
                        | Tag
                        .
  MathOp               = ( "-" | "+" | "*" | "/" )(. self.emitWord(self.token.val)              .)
                        .
  WordName             = identifier               (. self.emitWord(self.token.val)              .)
                        .
  WordDef<out name>    = identifier               (. name = self.addWord(self.token.val)        .)
                         .
  EndOfWord            =                          (. self.emit(";", self.T_OPCODE, 1)           .)
                         ";"
                        .
  Label                = "{"
                          identifier              (. self.addLabel(self.token.val)              .)
                          "}"
                          .
  Tag                  = "<"
                          identifier              (. self.addTag(self.token.val)                .)
                          ">"
                          .   
  Number               = IntOrFloat<out val>      (. self.emitVal(val, comment="// %s" % self.token.val) .)
                         .

  IntOrFloat<out val>  = ( number                 (. val = int(self.token.val, 10)              .)
                         | hexnumber              (. val = int(self.token.val, 16)              .)
                         | float                  (. val = float(self.token.val)                .)
                         | negnumber              (. val = int(self.token.val, 10)              .)
                         | negfloat               (. val = float(self.token.val)                .)
                         )
                         .


END EFroth.
